Gets some chart shit working

--- a/notebooks/stonks/drrx.ipynb
+++ b/notebooks/stonks/drrx.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "homeless-breathing",
+   "id": "corrected-demonstration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "pregnant-heart",
+   "id": "efficient-invalid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +34,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eligible-liberia",
+   "id": "satellite-brave",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = mysql.get_closes_by_symbol(ticker)"
+    "data = mysql.update_candles(ticker, 60)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "offshore-study",
+   "id": "dense-librarian",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surface-tragedy",
+   "id": "official-collection",
    "metadata": {},
    "outputs": [],
    "source": []
