--- a/notebooks/stonks/nvda.ipynb
+++ b/notebooks/stonks/nvda.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "willing-browser",
+   "execution_count": 4,
+   "id": "exclusive-australian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "functioning-karma",
+   "execution_count": 5,
+   "id": "sharing-steel",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ticker = 'AMD'\n",
+    "ticker = 'NVDA'\n",
     "\n",
     "mysql = Mysql()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "suspended-genetics",
+   "execution_count": 8,
+   "id": "simple-option",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "consistent-chambers",
+   "id": "wicked-client",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "homeless-surface",
+   "id": "substantial-incident",
    "metadata": {},
    "outputs": [],
    "source": []
