--- a/notebooks/stonks/wfc.ipynb
+++ b/notebooks/stonks/wfc.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "exact-reward",
+   "id": "moderate-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "generous-tracy",
+   "id": "viral-neighbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +34,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "british-sheet",
+   "id": "senior-patio",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = mysql.get_closes_by_symbol(ticker)"
+    "data = mysql.update_candles(ticker, 60)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cloudy-madison",
+   "id": "historical-commonwealth",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satellite-reconstruction",
+   "id": "convertible-details",
    "metadata": {},
    "outputs": [],
    "source": []
