--- a/src/client/src/i18n/en.json
+++ b/src/client/src/i18n/en.json
@@ -10,7 +10,7 @@
       "register_first_name_placeholder": "First name",
       "register_last_name_placeholder": "Last name",
       "register_submit": "Register",
-      "register_login": "If you already have a profile, you can <a href=\"{{href}}\">login here</a>",
+      "register_login": "If you already have a profile, login instead",
       "register_error_email_blank": "Email address cannot be blank",
       "register_error_first_name_blank": "First name cannot be blank",
       "register_error_last_name_blank": "Last name cannot be blank"
