--- a/src/client/src/i18n/en.json
+++ b/src/client/src/i18n/en.json
@@ -4,7 +4,7 @@
       "login_username_placeholder": "Username",
       "login_password_placeholder": "Password",
       "login_submit": "Login",
-      "login_create_account": "If you don't have a Money Printer profile, click <a href=\"{{href}}\">to create a profile now</a>.",
+      "login_create_account": "If you don't have a Money Printer account, I dunno what to tell ya.",
 
       "register_email_placeholder": "Email",
       "register_first_name_placeholder": "First name",
