Gets some proof of concept tests working

--- a/notebooks/options.ipynb
+++ b/notebooks/options.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "chinese-competition",
+   "id": "bigger-migration",
    "metadata": {},
    "source": [
     "Black-Scholes Options Pricing Model\n",
@@ -18,19 +18,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "twenty-supplement",
+   "id": "happy-drama",
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lib'",
+     "evalue": "No module named 'core'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-1-a15b7bc24b86>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOptions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/mnt/c/Users/Tim/src/money-printer/src/core/lib/options.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas_datareader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mweb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmysql\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMysql\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myahoo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_tnx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lib'"
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'core'"
      ]
     }
    ],
@@ -42,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "stuck-tuning",
+   "execution_count": null,
+   "id": "intense-antibody",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,189 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "upper-webcam",
+   "execution_count": null,
+   "id": "immediate-methodology",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>c</th>\n",
-       "      <th>10.081132</th>\n",
-       "      <th>10.585325</th>\n",
-       "      <th>11.089518</th>\n",
-       "      <th>11.593711</th>\n",
-       "      <th>12.097904</th>\n",
-       "      <th>12.602096</th>\n",
-       "      <th>13.106289</th>\n",
-       "      <th>13.610482</th>\n",
-       "      <th>14.114675</th>\n",
-       "      <th>14.618868</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-03-26 14:38:09.290096</th>\n",
-       "      <td>-0.821797</td>\n",
-       "      <td>-0.586228</td>\n",
-       "      <td>-0.346548</td>\n",
-       "      <td>-0.103037</td>\n",
-       "      <td>0.144057</td>\n",
-       "      <td>0.394513</td>\n",
-       "      <td>0.648131</td>\n",
-       "      <td>0.904734</td>\n",
-       "      <td>1.164158</td>\n",
-       "      <td>1.426257</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 14:38:09.290096</th>\n",
-       "      <td>-0.887078</td>\n",
-       "      <td>-0.650504</td>\n",
-       "      <td>-0.410160</td>\n",
-       "      <td>-0.166304</td>\n",
-       "      <td>0.080838</td>\n",
-       "      <td>0.331060</td>\n",
-       "      <td>0.584181</td>\n",
-       "      <td>0.840036</td>\n",
-       "      <td>1.098477</td>\n",
-       "      <td>1.359368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-28 14:38:09.290096</th>\n",
-       "      <td>-0.957522</td>\n",
-       "      <td>-0.719701</td>\n",
-       "      <td>-0.478492</td>\n",
-       "      <td>-0.234128</td>\n",
-       "      <td>0.013187</td>\n",
-       "      <td>0.263269</td>\n",
-       "      <td>0.515954</td>\n",
-       "      <td>0.771093</td>\n",
-       "      <td>1.028554</td>\n",
-       "      <td>1.288214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-29 14:38:09.290096</th>\n",
-       "      <td>-1.035063</td>\n",
-       "      <td>-0.795671</td>\n",
-       "      <td>-0.553332</td>\n",
-       "      <td>-0.308246</td>\n",
-       "      <td>-0.060595</td>\n",
-       "      <td>0.189462</td>\n",
-       "      <td>0.441782</td>\n",
-       "      <td>0.696236</td>\n",
-       "      <td>0.952708</td>\n",
-       "      <td>1.211092</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-30 14:38:09.290096</th>\n",
-       "      <td>-1.123426</td>\n",
-       "      <td>-0.881984</td>\n",
-       "      <td>-0.638123</td>\n",
-       "      <td>-0.392010</td>\n",
-       "      <td>-0.143794</td>\n",
-       "      <td>0.106396</td>\n",
-       "      <td>0.358440</td>\n",
-       "      <td>0.612234</td>\n",
-       "      <td>0.867682</td>\n",
-       "      <td>1.124696</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-31 14:38:09.290096</th>\n",
-       "      <td>-1.232111</td>\n",
-       "      <td>-0.987748</td>\n",
-       "      <td>-0.741667</td>\n",
-       "      <td>-0.493986</td>\n",
-       "      <td>-0.244810</td>\n",
-       "      <td>0.005766</td>\n",
-       "      <td>0.257659</td>\n",
-       "      <td>0.510794</td>\n",
-       "      <td>0.765102</td>\n",
-       "      <td>1.020523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-04-01 14:38:09.290096</th>\n",
-       "      <td>-1.459434</td>\n",
-       "      <td>-1.207338</td>\n",
-       "      <td>-0.955241</td>\n",
-       "      <td>-0.703145</td>\n",
-       "      <td>-0.451048</td>\n",
-       "      <td>-0.198952</td>\n",
-       "      <td>0.053145</td>\n",
-       "      <td>0.305241</td>\n",
-       "      <td>0.557338</td>\n",
-       "      <td>0.809434</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "c                           10.081132  10.585325  11.089518  11.593711  \\\n",
-       "t                                                                        \n",
-       "2021-03-26 14:38:09.290096  -0.821797  -0.586228  -0.346548  -0.103037   \n",
-       "2021-03-27 14:38:09.290096  -0.887078  -0.650504  -0.410160  -0.166304   \n",
-       "2021-03-28 14:38:09.290096  -0.957522  -0.719701  -0.478492  -0.234128   \n",
-       "2021-03-29 14:38:09.290096  -1.035063  -0.795671  -0.553332  -0.308246   \n",
-       "2021-03-30 14:38:09.290096  -1.123426  -0.881984  -0.638123  -0.392010   \n",
-       "2021-03-31 14:38:09.290096  -1.232111  -0.987748  -0.741667  -0.493986   \n",
-       "2021-04-01 14:38:09.290096  -1.459434  -1.207338  -0.955241  -0.703145   \n",
-       "\n",
-       "c                           12.097904  12.602096  13.106289  13.610482  \\\n",
-       "t                                                                        \n",
-       "2021-03-26 14:38:09.290096   0.144057   0.394513   0.648131   0.904734   \n",
-       "2021-03-27 14:38:09.290096   0.080838   0.331060   0.584181   0.840036   \n",
-       "2021-03-28 14:38:09.290096   0.013187   0.263269   0.515954   0.771093   \n",
-       "2021-03-29 14:38:09.290096  -0.060595   0.189462   0.441782   0.696236   \n",
-       "2021-03-30 14:38:09.290096  -0.143794   0.106396   0.358440   0.612234   \n",
-       "2021-03-31 14:38:09.290096  -0.244810   0.005766   0.257659   0.510794   \n",
-       "2021-04-01 14:38:09.290096  -0.451048  -0.198952   0.053145   0.305241   \n",
-       "\n",
-       "c                           14.114675  14.618868  \n",
-       "t                                                 \n",
-       "2021-03-26 14:38:09.290096   1.164158   1.426257  \n",
-       "2021-03-27 14:38:09.290096   1.098477   1.359368  \n",
-       "2021-03-28 14:38:09.290096   1.028554   1.288214  \n",
-       "2021-03-29 14:38:09.290096   0.952708   1.211092  \n",
-       "2021-03-30 14:38:09.290096   0.867682   1.124696  \n",
-       "2021-03-31 14:38:09.290096   0.765102   1.020523  \n",
-       "2021-04-01 14:38:09.290096   0.557338   0.809434  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "price_matrix = op.call_forecast(ticker, strike, expiry).iloc[:,]\n",
     "price_matrix"
@@ -247,19 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "rural-officer",
+   "execution_count": 2,
+   "id": "liked-mailman",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[3.303742459489611, 4.603519238185726]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'op' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-35b5a58ef9b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mentry_window\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall_entry_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrike\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpiry\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mentry_window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'op' is not defined"
+     ]
     }
    ],
    "source": [
@@ -269,19 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "southeast-infrastructure",
+   "execution_count": 3,
+   "id": "excited-garlic",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[4.603519238185726, 7.829950933344243]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'op' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-31ed74f5b4a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mexit_window\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall_exit_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrike\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpiry\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcost\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mexit_window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'op' is not defined"
+     ]
     }
    ],
    "source": [
@@ -292,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unknown-spread",
+   "id": "cloudy-naples",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -314,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
